fix close "x" alignment in sidenav

--- a/assets/css/_nav.styl
+++ b/assets/css/_nav.styl
@@ -4,6 +4,7 @@
   column(1/10, offset: 1/48)
   pos(absolute, (small-padding-block - (med-padding-block / 2)), false, false, 0)
   min-width 86px
+  margin-left small-padding-block
   hideAt(small-snap)
   +below(med-snap)
     transition top 500ms ease-out
